--- a/css/10000hours.css
+++ b/css/10000hours.css
@@ -43,19 +43,19 @@
 
 /* header 부분 : 1만 시간의 법칙 이미지와 설명*/
 
-.tit .rule {
+.title__logo-letter {
     position: relative;
     top: 50px;
     width: 350px;
 }
 
-.tit .clock {
+.title__logo-drawing {
     position: relative;
     bottom: 75px;
     width: 160px;
 }
 
-.tit .sub {
+.title__text-desc{
     position: relative;
     bottom: 50px;
     color: #F5DF4D;
@@ -63,23 +63,18 @@
     font-size: 23px;
 }
 
-.tit .def strong {
-    font-family: 'GmarketSansBold';
-    font-size: 18px;
-}
-
-.tit .def {
+.title__text-def {
     position: relative;
     top: 10px;
     font-size: 12px;
 }
 
-.tit .def strong {
+.title__text-def strong {
     font-family: 'GmarketSansBold';
-    font-size: 14px;
-
+    font-size: 18px;
 }
-.tit .quot {
+
+.title__img-quot {
     position:relative;
     bottom: 50px;
     width: 320px;
@@ -87,13 +82,13 @@
 
 /* main 부분 : 훈련 시간을 입력받아 결과 표시 */
 
-.input { 
+.cal__input { 
     position:relative;
     top: 30px;
 }
 
 /* Attribue Selectors [] */
-input[type=text] {
+.cal__input input[type=text] {
     border:1px solid #5B2386;
     border-radius: 7px;
     width: 150px;
@@ -104,11 +99,12 @@ input[type=text] {
 }
 
 /* Pseudo Element :: */
-input::placeholder {
+.cal__input input::placeholder {
     color:#BABCBE
 }
 
-.btn {
+.btn--submit {
+
     padding: 10px 20px;
     background-color: #FCEE21;
     border-color:#5B2386;
@@ -118,73 +114,77 @@ input::placeholder {
     color: #5B2386;
 }
 
-.submit {
-    position: relative;
+.btn--submit-time {
+    position:relative;
     left: 20px;
-    top: 40px;
+    top: 90px;
 }
 
-.click {
+.cal__img--click {
     position: relative;
-    top: 70px;
+    top: 120px;
     left: 20px;
     width: 40px;
 }
 
 /* 결과 확인하는 부분 */
 
-.cal .output {
+.cal__output {
     position: relative;
     line-height: 35px;
     top: 150px;
 }
 
-.output strong {
+.cal__output strong {
     font-family: 'GmarketSansBold';
     font-size: 30px;
     margin: 5px;
 }
 
-.go {
+.btn--submit-go {
     position: relative;
-    top: 70px;
+    top: 190px;
     right: 5px;
-
 }
 
-.share {
+.btn--submit-share {
     background-color: white;
     text-decoration-line: none;
     position: relative;
-    top: 70px;
+    top: 190px;
 }
 
-.blind {
-    display : none;
-}
 
 /* 회사 로고와 저작권 표시 */
-.cont-footer {
+.corp-info {
     position : relative;
-    top: 300px;
+    top: 250px;
     display: flow-root;
 }
 
-.logo {
+.corp-info__logo {
     position: relative;
     bottom: 10px;
+    left: 10px;
     width: 80px;
 }
 
-.copyright {
+.corp-info__copyright {
     font-family: 'Noto Sans KR';
     font-size: 10px;
     line-height: 17px;
     margin-bottom: 50px;
+    position: relative;
+    left: 5px;
 }
 
 /* 모달 부분 */
 
 .modal {
     display: none;
+}
+
+/* 기타 : 블라인드 처리 */
+.blind {
+    display : none;
 }
